<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/fuentegta"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#989898"
            android:textSize="50sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="25dp"
        android:fontFamily="@font/fuentegta"
        android:gravity="right"
        android:textColor="#989898"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_duckhunt"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:layout_height="90dp"
            app:srcCompat="@drawable/duck" />

        <Button
            android:id="@+id/btn_game1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/play"
            android:onClick="duck_hunt"
            android:text="@string/btn_game1"
            android:textColor="@android:color/white" />


        <ImageView
            android:id="@+id/iv_pokemon"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:srcCompat="@drawable/pokemon" />

        <Button
            android:id="@+id/btn_game2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/play"
            android:onClick="showdown"
            android:text="@string/btn_game2"
            android:textColor="@android:color/white" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_volver_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_custom"
            android:fontFamily="@font/play"
            android:onClick="cierra_sesion"
            android:text="@string/btn_cerrar_sesion"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>

